Add getFriends API
