# openapi.yaml
@@ -23,9 +23,26 @@ paths:
           schema:
             $ref: "#/definitions/SuccessResponse"
 
-  "/request":
-
+  "/friends/{userId}":
     get:
+      description: Get the list of friends
+      operationId: GetFriendList
+      parameters:
+      - in: path
+        name: userId
+        description: ID of the user
+        required: true
+        type: string
+      responses:
+        200:
+          description: List of friends
+          schema:
+            $ref: "#/definitions/GetFriendsResponse"
+        404:
+          description: User not found
+
+  "/request":
+    post:
       description: Get the list of request for this user
       operationId: FriendRequestGet
       parameters:
@@ -104,6 +121,25 @@ definitions:
       status:
         type: boolean
 
+  GetFriendsResponse:
+    type: object
+    properties:
+      tot:
+        description: Total number of friends
+        type: number
+      friends:
+        description: Friends list
+        type: array
+        items:
+          $ref: "#/definitions/FriendList"
+
+  FriendList:
+    type: object
+    properties:
+      user_id:
+        description: Friend ID
+        type: string
+
   FriendRequestGetParameters:
     type: object
     properties:
@@ -132,6 +168,7 @@ definitions:
       receiver_id:
         description: UserId of the receiver
         type: string
+
 
 securityDefinitions:
   api_key:
